@@ -11,8 +11,6 @@ import org.apache.http.conn.util.InetAddressUtils;
 import org.prebid.server.auction.model.IpAddress;
 
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 public class IpAddressHelper {
 
@@ -30,12 +28,12 @@ public class IpAddressHelper {
 
     public IpAddressHelper(int ipv6AlwaysMaskBits, int ipv6AnonLeftMaskBits, List<String> ipv6LocalNetworks) {
         ipv6AlwaysMaskAddress =
-                toAddress(String.format("::/%d", validateIpv6AlwaysMaskBits(ipv6AlwaysMaskBits))).getNetworkMask();
+                toAddress("::/" + validateIpv6AlwaysMaskBits(ipv6AlwaysMaskBits)).getNetworkMask();
         ipv6AnonLeftMaskAddress =
-                toAddress(String.format("::/%d", validateIpv6AnonLeftMaskBits(ipv6AnonLeftMaskBits))).getNetworkMask();
+                toAddress("::/" + validateIpv6AnonLeftMaskBits(ipv6AnonLeftMaskBits)).getNetworkMask();
         ipv6LocalNetworkMaskAddresses = ipv6LocalNetworks.stream()
                 .map(this::toAddress)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public String anonymizeIpv6(String ip) {
@@ -78,18 +76,17 @@ public class IpAddressHelper {
         if (StringUtils.isBlank(ip) || !InetAddressUtils.isIPv4Address(ip)) {
             return ip;
         }
+
         String maskedIp = ip;
-        for (int i = 0; i < 1; i++) {
-            if (maskedIp.contains(".")) {
-                maskedIp = maskedIp.substring(0, maskedIp.lastIndexOf("."));
-            } else {
-                // ip is malformed
-                return ip;
-            }
+        final int lastDotIndex = maskedIp.lastIndexOf(".");
+        if (lastDotIndex != -1) {
+            maskedIp = maskedIp.substring(0, lastDotIndex);
+        } else {
+            // ip is malformed
+            return ip;
         }
-        return String.format("%s%s", maskedIp,
-                IntStream.range(0, 1).mapToObj(ignored -> "0")
-                        .collect(Collectors.joining(".", ".", "")));
+
+        return maskedIp + ".0";
     }
 
     private String maskIpv6(IPAddress ipAddress) {
