@@ -22,7 +22,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 
 public class HttpInteractionLogger {
 
@@ -62,7 +61,7 @@ public class HttpInteractionLogger {
         try {
             return mapper.encodeToString(mapper.mapper().readTree(value));
         } catch (JsonProcessingException e) {
-            return String.format("Not parseable JSON passed: %s", value.replaceAll("[\r\n]+", " "));
+            return "Not parseable JSON passed: " + value.replaceAll("[\r\n]+", " ");
         }
     }
 
@@ -166,7 +165,7 @@ public class HttpInteractionLogger {
 
         final List<Imp> updatedImps = imps.stream()
                 .map(imp -> makeImpExtBidderName(bidder, imp))
-                .collect(Collectors.toList());
+                .toList();
 
         return bidRequest.toBuilder().imp(updatedImps).build();
     }
